@@ -1,6 +1,6 @@
 #
 # ovirt-host-deploy -- ovirt host deployer
-# Copyright (C) 2012-2015 Red Hat, Inc.
+# Copyright (C) 2015 Red Hat, Inc.
 #
 # This library is free software; you can redistribute it and/or
 # modify it under the terms of the GNU Lesser General Public
@@ -17,18 +17,21 @@
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA
 #
 
-MAINTAINERCLEANFILES = \
-	$(srcdir)/Makefile.in \
-	$(NULL)
 
-SUBDIRS = \
-	core \
-	hosted-engine \
-	vdsm \
-	vmconsole \
-	$(NULL)
+"""oVirt Hosted Engine plugin."""
 
-install-data-local:
-	$(MKDIR_P) "$(DESTDIR)$(otopiplugindir)"
-	rm -f "$(DESTDIR)$(otopiplugindir)/ovirt-host-common"
-	ln -s "$(ovirthostdeployplugindir)/ovirt-host-common" "$(DESTDIR)$(otopiplugindir)/ovirt-host-common"
+
+from otopi import util
+
+
+from . import configureha
+from . import packages
+
+
+@util.export
+def createPlugins(context):
+    configureha.Plugin(context=context)
+    packages.Plugin(context=context)
+
+
+# vim: expandtab tabstop=4 shiftwidth=4
